2005-02-26  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (get_nondigit_option): Don't give up too early.
	* src/search.c (Pexecute): Add a comment explaining that this
	  situation should not happen.

2005-02-22  Claudio Fontana  <sick_soul@users.sourceforge.net>  (tiny change)

	* src/search.c (Pexecute): Consider eof case when delimiting
	  matching line.  Fixes bug #4531.

2005-02-23  Julian Foad  <julianfoad@btopenworld.com>

	* po/ko.po: Fix email address.
	* README-alpha: Fix email addresses and clarify the notes.
	* tests/backref.sh: Fix trivial typos.

2005-02-08  Bruno Haible  <bruno@clisp.org>  (tiny change)

	* src/kwset.h (kwsincr, kwsprep): Change return type to 'const char *'.
	* src/kwset.c (kwsincr, kwsprep): Likewise.

2005-02-08  Arnold D. Robbins  <arnold@skeeve.com>
	    Stepan Kasal  <kasal@ucw.cz>

	* src/mbsupport.h: Don't say the file is part of GAWK.
	Make wording in explanatory comment more generic.

2005-02-07  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c: Document that -X is undocumented.

2005-01-16  Bruno Haible  <bruno@clisp.org>  (tiny change)
	    Stepan Kasal  <kasal@ucw.cz>

	* configure.in: Add tests for iswctype, mbrlen, wcrtomb, wcscoll;
	  use AC_FUNC_MBRTOWC to check for mbrtowc and mbstate_t; move
	  AC_MBSTATE_T below it.
	* src/grep.c: Include mbsupport.h to define MBS_SUPPORT uniformly.
	* src/mbsupport.h: Don't test for HAVE_WCTYPE_T.

2005-01-13  Arnold D. Robbins  <arnold@skeeve.com>

	* src/dfa.c (dfaparse): Use LC_COLLATE whenever it is defined;
	  ENABLE_NLS has nothing to do with this.

2005-01-07  Stepan Kasal  <kasal@ucw.cz>

	* tests/status.sh: Added two tests--option `-s' should have no
	  influence on the exit status.

2004-12-16  Stepan Kasal  <kasal@ucw.cz>

	Cosmetic changes, mostly imported from gawk:

	* src/dfa.c (lexstart): Removed unused variable.
	(parse_bracket_exp_mb): Don't initialize different pointers in one
	  assignment
	(lex): Don't initialize automatic arrays, it's invalid in pre-C89